<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="next_button">NEXT</string>
    <string name="prev_button">PREV</string>
    <string name="menu_settings">Settings</string>
    <string name="correct_answer">Correct!</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="perfect_result">Congrats, you are awesome!</string>
    <string name="normal_result">You are not so bad, try again.</string>
    <string name="bad_result">Hey, read some books, n try again later.</string>

    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat</string>
    <string name="judgment_toast">Cheating is wrong.</string>
    <string name="back_button">Back</string>

    <!--QUESTIONS-->
    <string name="question_oceans">1) The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">2) The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">3) The source of the Nile River is in Egypt.</string>
    <string name="question_americas">4) The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">5) Lake Baikal is the world\’s oldest and deepest freshwater lake.</string>
    <string name="question_result">is your result. Congrats.</string>
    <!--END QUESTIONS-->
</resources>
