<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_bg"
    android:background="@android:color/white"
    android:gravity="center">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible"
        android:id="@+id/grey_bg"
        android:background="@color/grey"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="count"
        android:textSize="30sp"
        android:id="@+id/count_text"
        android:padding="10dp"
        android:text="0"/>

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:padding="24dp"
        android:textAlignment="center"
        tools:text="question"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button" />
        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button" />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cheat_button"
        android:layout_margin="10dp"
        android:id="@+id/cheat_button"/>
    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RESET"
        android:visibility="gone"/>
</LinearLayout>
    <TextView
        android:id="@+id/answer_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:background="@android:color/white"
        android:textSize="50sp"
        android:gravity="center"/>
</FrameLayout>

